# AirISP-next

./: .gitignore  .ubuntu-22.04.source  Cargo.toml  Cross.toml  README.md  build.rs  docker  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: release.yml  ssh.yml
chip_info/: config.toml
i18n/: app.yml  zh-CN.toml
src/: AirISP.rs  App.vue  chip_info.rs  file_embed.rs  get.rs  hex_to_bin.rs  language.rs  main.rs  peripheral.rs  write_flash.rs
src-tauri/: Cargo.toml  Cross.toml  README.md  build.rs  tauri.conf.json
src-tauri/i18n/: app.yml
src-tauri/src/: AirISP.rs  get.rs  hex_to_bin.rs  log.rs  main.rs  write_flash.rs
src/peripheral/: general_uart.rs  mod.rs  swd.rs
