[package]
name = "AirISP-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = "1.0.192"
serde_derive = { version = "1.0.192", features = [] }
whoami = "1.4.1"
toml = "0.8.8"
rust-embed="8.0.0"
