[package]
name = "AirISP-next"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = "1.0.192"
serde_derive = { version = "1.0.192", features = [] }
whoami = "1.4.1"
serialport = "4.3.0"
rust-i18n = "2.3.0"
colored = "2.1.0"
hex = "0.4.3"
tokio = { version = "1.35.0", features = ["full"] }
crossterm = "0.27.0"
time = "0.3.30"
probe-rs = { git = "https://github.com/Air-duino/probe-rs.git", branch = "new_target/AirMCU" }
log = "0.4.20"
lazy_static = "1.4.0"
chrono = "0.4.31"

[build-dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.8.8"
